--- a/example/package.json
+++ b/example/package.json
@@ -8,23 +8,24 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "build:web": "expo build:web",
     "start": "expo start",
     "test": "jest",
     "storybook": "start-storybook -p 7007",
-    "build-storybook": "build-storybook"
+    "build:storybook": "build-storybook"
   },
   "dependencies": {
-    "expo": "^40.0.0",
-    "expo-splash-screen": "~0.8.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "expo": "^42.0.4",
+    "expo-splash-screen": "^0.11.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-native": "0.63.4",
-    "react-native-unimodules": "~0.12.0",
-    "react-native-web": "~0.14.9"
+    "react-native-unimodules": "^0.14.8",
+    "react-native-web": "^0.17.5"
   },
   "devDependencies": {
-    "@babel/core": "~7.12.10",
-    "@babel/runtime": "^7.9.6",
+    "@babel/core": "^7.15.8",
+    "@babel/runtime": "^7.15.4",
     "@storybook/addon-actions": "^5.3.21",
     "@storybook/addon-knobs": "^5.3.21",
     "@storybook/addon-links": "^5.3.21",
@@ -32,11 +33,11 @@
     "@storybook/addon-ondevice-knobs": "^5.3.25",
     "@storybook/react-native": "^5.3.25",
     "@storybook/react-native-server": "^5.3.23",
+    "@types/react-native": "^0.65.5",
     "babel-loader": "^8.2.2",
     "babel-plugin-module-resolver": "^4.0.0",
-    "babel-preset-expo": "8.3.0",
-    "expo-cli": "^4.0.13",
-    "typescript": "~4.0.0",
-    "@types/react-native": "~0.63.2"
+    "babel-preset-expo": "^8.4.1",
+    "expo-cli": "^4.12.1",
+    "typescript": "^4.4.3"
   }
 }
